--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         class="portrait"
       />
       <h1 style="color:white"> Hi! I'm Anthony J.&nbsp;Politza</h1>
-      <p>I love learning, so here's how I define myself:</p>
+      <p>I'm a:</p>
       <ul>
         <li>Biomedical Engineer (PhD)</li>
         <li>Hardware Engineer</li>
@@ -56,19 +56,9 @@
         You can email me <a href="ajpolitza@gmail.com">here</a>,<br />
         
       </p>
-      <svg
-        class="squiggle"
-        xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink"
-        viewBox="0 0 600 100"
-      >
-        <path
-          class="squiggle-path"
-          d="M 0 50 Q 50 0, 100 50 Q 150 100, 200 50 Q 250 0, 300 50 Q 350 100, 400 50 Q 450 0, 500 50 Q 550 100, 600 50"
-          stroke-width="5"
-          stroke-linecap="round"
-          fill="transparent"
-        ></path>
+      <svg height="5" width="1000" xmlns="http://www.w3.org/2000/svg">
+	<line x1="0" y1="0" x2="1000" y2="0" style="stroke:white;stroke-width:15" />
+  
       </svg>
     </section>
 
